# moltydex

./: .env.local.example  .gitignore  ACQUISITION_SUMMARY.md  AUTOMATED_PROMOTION_TOOLS.md  AUTOMATION_ACCESS_NEEDS.md  AUTONOMOUS_6_HOUR_PLAN.md  AUTONOMOUS_ACTIVITY_LOG.md  AUTONOMOUS_CONTINUING.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_IMPROVEMENTS_PLAN.md  AUTONOMOUS_OUTREACH_PLAN.md  AUTONOMOUS_POSTING_STATUS.md  AUTONOMOUS_PROGRESS_UPDATE.md  AUTONOMOUS_SUMMARY.md  AUTONOMOUS_VISIBILITY_PLAN.md  BALANCE_ISSUES_SUMMARY_FOR_OPUS.md  BLOG_OPTIMIZATION_SUMMARY.md  BLOG_POST_DRAFT.md  BLOG_READY.md  CHANGELOG.md  CHECK_USAGE.md  CODE_OF_CONDUCT.md  CODE_REPLACEMENT_VERIFICATION.md  COMMUNITY_OUTREACH_READY.md  COMPLETE_AUTONOMOUS_WORK.md  CONTRIBUTING.md  DEBUG_DEPLOYMENT_ERRORS.md  DEPLOY.md  DEPLOYMENT_FIX.md  DISCORD_READY.md  DISCORD_SERVER_CREATION.md  EMAIL_CONFIRMED.md  EMAIL_SETUP_FREE_GUIDE.md  EMAIL_SETUP_GUIDE.md  EXECUTION_LOG.md  FEE_COLLECTION_FIX.md  FEE_COLLECTION_STATUS.md  FEE_COLLECTION_STATUS_FINAL.md  FEE_WALLET_VERIFICATION.md  FINAL_STATUS.md  (+60 more)
.github/: pull_request_template.md
agent/: .env.example  .gitignore  LICENSE  QUICK_START.md  README.md  USE_CASES.md  WALLET_SETUP.md  package.json  vitest.config.ts
agent-api/: package.json
api/: .env.example  .env.production  .gitignore  index.js  package.json  test-new-endpoints.js  vercel.json
blog/: building-x402-enabled-apis.md  comparing-moltydex-to-other-dex-aggregators.md  how-to-build-x402-agent.md  (+5 more)
sdk/: README.md  agentdex.py  pyproject.toml
sdk/moltydex/: __init__.py  client.py
(+505 files in other folders)
